@@ -1,3 +1,4 @@
+* Change tax percentage into rate
 * Autoreconcile posted move with just one line of zero
 * Remove centralised counterpart option and functionality
 
